k3s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comentarios-app-service
  namespace: devops
spec:
  selector:
    app: comentarios-app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 5000
  type: LoadBalancer
