k3s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comentarios-app
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comentarios
  template:
    metadata:
      labels:
        app: comentarios
    spec:
      containers:
      - name: comentarios
        image: 192.168.1.6:8081/repository/docker-repo/devops/app:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: comentarios-service
  namespace: devops
spec:
  selector:
    app: comentarios
  ports:
    - protocol: TCP
      port: 8000 
      targetPort: 8000
  type: LoadBalancer
