k3s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comentarios-app-ingress
  namespace: devops
spec:
  rules:
  - host: comments.devops-challenge.globo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: comentarios-app-service
            port:
              number: 8000
